# ncs-scale

./: CMakeLists.txt  bluetooth.h  channels.h  prj.conf  west.yml
boards/: nrf52dk_nrf52832.overlay
include/: bluetooth.h  channels.h  display.h
src/: bluetooth.c  channels.c  display.c  main.c  weight.c
